ALPHA V2.2.5 - The start of the searching update + Visibility fixes

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -244,6 +244,12 @@ body {
 .hidden{
   display: none;
 }
+#instruction{
+  transform: translateX(500px);
+  font-size: 45px;
+  color: wheat;
+  width: 1000px;
+}
 .BanFileExplorer{
   display: grid;
   transform: translateY(-220px);
@@ -493,6 +499,7 @@ h3{
   background: none;
   border: none;
   transition: 0.5s;
+  filter: drop-shadow(0px .1px 2px white)
   }
 .favimg{
   height:30px;
@@ -516,6 +523,10 @@ h3{
   height:150px;
   transform: translate(-450px, 80px);
 }
+#pfpp{
+  width: 25px;
+  height: 25px;
+}
 #tm2pfp{
   position: absolute;
   width: 150px;
@@ -532,7 +543,7 @@ h3{
   cursor: pointer;
 }
 #TEAMPFPNAME{
-  transform: translate(110px,-80px);
+  transform: translate(90px,-80px);
   color: white;
   filter: drop-shadow(2px .1px 2px black)
 
